<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MX商城</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="homepage">首页</string>
    <string name="classification_page">分类</string>
    <string name="activities_page">商城活动</string>
    <string name="shopping_car_page">购物车</string>
    <string name="member_center_page">我的</string>
    <string name="new_recommandation">新品推荐</string>
    <string name="more_recommandation">更多推荐＞</string>
    <string name="hot_sell">热卖</string>
    <string name="hot_sell2">·限时限量，抢完即止</string>
    <string name="baike">家装百科</string>
    <string name="more_baike">查看更多</string>
    <string name="name_default">不锈钢滑动阻尼</string>
    <string name="price_default">￥338.00</string>
    <string name="class_kitchen">厨房橱柜收纳</string>
    <string name="class_wardrobe">衣柜间空间收纳</string>
    <string name="class_led">家具氛围照明灯</string>
    <string name="class_hardware">功能五金配件</string>
    <string name="all">全部</string>
    <string name="class_kitchen_1">收纳得</string>
    <string name="class_kitchen_2">转角篮</string>
    <string name="class_kitchen_3">连动拉篮</string>
    <string name="class_kitchen_4">地柜连门拉篮</string>
    <string name="class_kitchen_5">三边组合拉篮</string>
    <string name="class_kitchen_6">水槽篮</string>
    <string name="class_kitchen_7">多功能调味篮</string>
    <string name="class_kitchen_8">骑马抽刀叉盘</string>
	<string name="class_kitchen_9">挂件</string>    
	<string name="class_wardrobe_1">分隔盒</string>
    <string name="class_wardrobe_2">衣物篮</string>
    <string name="class_wardrobe_3">衣物西裤架</string>
    <string name="class_wardrobe_4">西裤架</string>
    <string name="class_wardrobe_5">侧装篮</string>
    <string name="class_wardrobe_6">挂衣杆</string>
    
    <string name="class_led_1">衣杆灯</string>
    <string name="class_led_2">人体感应灯</string>
    <string name="class_led_3">手扫感应灯</string>
    <string name="class_led_4">红外感应灯</string>
    <string name="class_led_5">制动开关灯</string>
    
    <string name="qpoint_default">0</string>
    <string name="qpoint">优惠券</string>
    <string name="mypoint_default">0</string>
    <string name="mypoint">积分</string>
	<string name="change_phone">绑定手机</string>
	<string name="change_mail">绑定邮箱</string>
    
	<string name="member_manage">账户管理</string>
	<string name="member_center">个人中心</string>
	<string name="edit">编辑</string>
	<string name="shoppingCar">购物车</string>
	<string name="allCheck">全选</string>
	<string name="allAddDefault">合计：￥0.00</string>
	<string name="realallAdd">总额：￥0.00</string>
	<string name="allBuy">结算</string>
	<string name="ac1">包邮区</string>
	<string name="ac2">新品区</string>
	<string name="ac3">试用区</string>
	<string name="ac4">团购区</string>
	<string name="ac5">打折区</string>
	<string name="ac6">特卖区</string>
	<string name="ac7">热销区</string>
	<string name="ac8">抽奖区</string>
	<string name="jiazhuangbaike">家装百科</string>
	<string name="addInCar">加入购物车</string>
	<string name="checked">已选</string>
	<string name="toolbar_title">商品详情</string>
	<string name="LoginTitle">登陆界面</string>
	<string name="username">账号：</string>
	<string name="password">密码：</string>
	<string name="remember_pwd">记住密码</string>
	<string name="register">注册</string>
	<string name="login">登陆</string>
	<string name="noLogin">点击头像登陆</string>
	<string name="retry">重试</string>
	<string name="no_connection_text">请检查网络连接是否正常\n点击重试重新连接</string>
	<string name="LogoutTitle">退出登录页面</string>
	<string name="Logout_btn_text">退出登录</string>
	<string name="noProduct">购物车空空如也，先去逛逛吧</string>
	<string name="delete">删除</string>
	<string name="add_address">新增地址</string>
	<string name="RegisterTitle">注册页面</string>
	<string name="password_check">确认密码：</string>
	<string name="add_new_address">新建收货地址</string>
	<string name="manage_address">管理收货地址</string>
	<string name="detail_address">详细地址：</string>
	<string name="phoneNum">手机号码：</string>
	<string name="name">联系人名：</string>
	<string name="add">提交</string>
	<string name="buylist">结算清单</string>
    
</resources>
